--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Todo List</h1>
     
     <form id="f">
-        <h2>Add New Todo</h2>
+        <h2>Add New Todo 😇</h2>
         <label for="todo-name">Name:</label>
         <input type="text" id="todo-name" name="todo-name" required>
         <label for="todo-description">Description:</label>
